<resources>

    <string name="app_name"><font color='#373737'>NATOUR</font></string>

    <!-- Activity_Run -->
    <string name="activityRun_slogan"><font color='#373737'>Adventure awaits, go find it!</font></string>
    <string name="activityRun_signin">Sign in</string>
    <string name="activityRun_noaccountyet"><font color='#373737'>No account yet?</font><font color='#43DE70'> Sign up</font></string>

    <!-- Activity_Auth -->
    <string name="activityAuth_username">Username</string>
    <string name="activityAuth_password">Password</string>
    <string name="activityAuth_emailid">Email ID</string>
    <string name="activityAuth_retypepassword">Re-type password</string>
    <string name="activityAuth_signingoogle">Sign in with Google</string>
    <string name="activityAuth_signinfacebook">Sign in with Facebook</string>
    <string name="activityAuth_orsigninwith">Or, sign in with</string>
    <string name="activityAuth_signup">Sign up</string>
    <string name="activityAuth_terms">By signing up, you agree to our Terms &amp; Privacy Policy.</string>
    <string name="activityAuth_forgotpassword">Forgot your password?</string>
    <string name="activityAuth_alreadyhaveanaccount"><font color='#373737'>Already have an account?</font><font color='#88B27E'> Sign in</font></string>

    <!-- Activity_Pin -->
    <string name="activityPin_title">Email verification</string>
    <string name="activityPin_message">We have sent code to your email:</string>
    <string name="activityPin_mail">ang**cinic@gmail.com</string>
    <string name="activityPin_codemessage">Didn\'t receive code?</string>
    <string name="activityPin_verifyaccount">Verify account</string>

    <!-- Activity_ResetPwd -->
    <string name="ResetCR_message1">Enter your username and we will send you instructions to your email to reset your password</string>
    <string name="ResetCR_continue">Continue</string>
    <string name="ResetCR_backto">Back to sign in</string>
    <string name="ResetCR_title2">Type your code</string>
    <string name="ResetCR_password">New password</string>
    <string name="ResetCR_message2">Enter the code that was sent by email to reset your account</string>
    <string name="ResetCR_message3">Set your new password so you can login and access Pothub</string>
    <string name="ResetCR_title3">Create new password</string>

    <string name="server_client_id">556927589955-0jgcao4tfbrllnjie8c5b1qr8nlce0mo.apps.googleusercontent.com</string>

    <!-- Activity_HomeChatActivity -->
    <string name="chat_api_key">nbcrsrs5wrj8</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_gpx">GpxActivity</string>

    <!-- Activity_MapActivity -->


</resources>