<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <TextView
        android:id="@+id/fragmentSignup_signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/activityAuth_signup"
        android:textColor="#373737"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragmentSignup_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_custom"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="16dp"
        android:hint="@string/activityAuth_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_signuptext"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragmentSignup_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_custom"
        android:drawableStart="@drawable/icon_mail"
        android:drawablePadding="16dp"
        android:hint="@string/activityAuth_emailid"

        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_username"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragmentSignup_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_custom"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="16dp"
        android:hint="@string/activityAuth_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragmentSignup_retypepassw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_custom"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="16dp"
        android:hint="@string/activityAuth_retypepassword"

        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_password"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/fragmentSignup_signup"
        android:layout_width="fill_parent"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_signin"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activityAuth_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_retypepassw"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fragmentSignup_termsandconditions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/activityAuth_terms"
        android:textAlignment="center"
        android:textColor="#373737"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_signup" />

    <TextView
        android:id="@+id/fragmentSignup_alreadyhaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/activityAuth_alreadyhaveanaccount"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentSignup_termsandconditions"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>