<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <com.chaos.view.PinView
        android:id="@+id/activityPin_pin"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:cursorVisible="false"
        android:inputType="numberPassword"
        android:itemBackground="@color/white"
        android:padding="16dp"
        android:textColor="#373737"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="#373737"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="20dp"
        app:itemSpacing="8dp"
        app:itemWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityPin_mail"
        app:lineColor="#C4C4C4"
        app:lineWidth="1dp"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/activityPin_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activityPin_mail"
        android:textColor="#373737"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityPin_message" />

    <TextView
        android:id="@+id/activityPin_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activityPin_message"
        android:textColor="#373737"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityPin_title" />

    <TextView
        android:id="@+id/activityPin_codeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activityPin_codemessage"
        android:textColor="#373737"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityPin_pin" />

    <android.widget.Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:background="@color/white"
        android:text="Resend"
        android:stateListAnimator="@null"
        android:textColor="@color/mygreen"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityPin_codeMessage" />

    <android.widget.Button
        android:id="@+id/activityPin_button"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_signin"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/activityPin_verifyaccount"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activityPin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/activityPin_title"
        android:textColor="#373737"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityPin_backbutton" />

    <ImageButton
        android:id="@+id/activityPin_backbutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back" />

</androidx.constraintlayout.widget.ConstraintLayout>