<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".auth.ResetCRUserFragment">

    <TextView
        android:id="@+id/fragmentCR2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ResetCR_title2"
        android:textColor="#373737"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentCR2_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/ResetCR_message2"
        android:textAlignment="center"
        android:textColor="#373737"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR2_title" />

    <com.chaos.view.PinView
        android:id="@+id/fragmentCR2_code"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:inputType="numberPassword"
        android:itemBackground="#F8F8F8"
        android:padding="16dp"
        android:textColor="#373737"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="#373737"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="20dp"
        app:itemSpacing="8dp"
        app:itemWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR2_message"
        app:lineColor="#F8F8F8"
        app:lineWidth="1dp"
        app:viewType="rectangle" />

    <android.widget.Button
        android:id="@+id/fragmentCR2_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edittext_custom"
        android:backgroundTint="@color/mygreen"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ResetCR_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR2_code" />



</androidx.constraintlayout.widget.ConstraintLayout>